--- a/.github/workflows/close-stale-discussions.yml
+++ b/.github/workflows/close-stale-discussions.yml
@@ -2,8 +2,8 @@ name: Close Stale GH Discussions
 
 on:
   schedule:
-    - cron: '0 0 * * *' 
-
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 jobs:
   close-discussions:
     runs-on: ubuntu-latest
@@ -58,7 +58,7 @@ jobs:
                 .filter(discussion => {
                   const createdAt = new Date(discussion.createdAt);
                   const hasLabel = discussion.labels.edges.some(labelEdge => labelEdge.node.name === LABEL);
-                  return hasLabel && createdAt >= 0;//oneWeekAgo;
+                  return hasLabel && createdAt >= oneWeekAgo;
                 });
 
               // Process each discussion
