--- a/.github/workflows/close-stale-discussions.yml
+++ b/.github/workflows/close-stale-discussions.yml
@@ -3,6 +3,7 @@ name: Auto Close Stale Discussions
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
+    workflow_dispatch: 
 
 jobs:
   close-discussions:
