--- a/.github/workflows/close-stale-discussions.yml
+++ b/.github/workflows/close-stale-discussions.yml
@@ -32,7 +32,7 @@ jobs:
 
           const OWNER = "prisma";
           const REPO = "prisma";
-          const ONE_WEEK_MS = 7 * 24 * 60 * 60 * 1000;
+          const ONE_WEEK_MS = 1;//7 * 24 * 60 * 60 * 1000;
 
           async function run() {
             const token = process.env.GITHUB_TOKEN;
